--- a/cloud-config-repo/cloud-config-dev.properties
+++ b/cloud-config-repo/cloud-config-dev.properties
@@ -4,4 +4,16 @@ mysqldb.datasource.username=root
 
 mysqldb.datasource.password=123456
 
+mysqldb.datasource.driverClassName = com.mysql.jdbc.Driver
+
+mysqldb.datasource.max-active=20
+
+mysqldb.datasource.max-idle=8
+
+mysqldb.datasource.max-maxWait=100
+
+mysqldb.datasource.min-idle=8
+
+mysqldb.datasource.initial-size=10
+
 logging.level.org.springframework.web:DEBUG
