--- a/cloud-config-repo/cloud-config-dev.properties
+++ b/cloud-config-repo/cloud-config-dev.properties
@@ -6,14 +6,14 @@ mysqldb.datasource.password=123456
 
 mysqldb.datasource.driverClassName = com.mysql.jdbc.Driver
 
-mysqldb.datasource.max-active=20
+mysqldb.datasource.maxActive=20
 
-mysqldb.datasource.max-idle=8
+mysqldb.datasource.maxIdle=8
 
-mysqldb.datasource.max-maxWait=100
+mysqldb.datasource.maxMaxWait=100
 
-mysqldb.datasource.min-idle=8
+mysqldb.datasource.minIdle=8
 
-mysqldb.datasource.initial-size=10
+mysqldb.datasource.initialSize=10
 
 logging.level.org.springframework.web:DEBUG
